[package]
name = "mongodb-ro-derive"
version = "0.2.0"
edition = "2024"
description = "Mongodb Derive."
license = "MIT OR Apache-2.0"
authors = ["Kak Smko <ba.smko@gmail.com>"]
repository = "https://github.com/kak-smko/mongodb-ro-derive"
documentation = "https://docs.rs/mongodb-ro-derive"
readme = "README.md"
keywords = ["mongodb-derive"]
categories = ["database"]

[lib]
proc-macro = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
proc-macro2 = "1"
syn = {version =  "2.0.96", features = ["extra-traits"]  }
quote = "1.0"
darling = "0.20.10"
structmeta="0.3.0"
